# ssrpc

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp  profile.txt
proto/: buf.yaml  sound.pb.go  sound.proto  sound_grpc.pb.go
src/: main.cpp
